turtleart.kerr36.Kerr36.scala.code
override def run():Unit= {
  avance(25)
}

def coteMotif():Unit = {
  avance(25)
}
def motif():Unit = {
  
})